# MonteCarlo

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  MonteCarlo.sln  Pixel.cpp  Pixel.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Surface.cpp  Surface.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h
MonteCarlo/: Camera.cpp  Camera.h  ColorDbl.h  Direction.cpp  Direction.h  MonteCarlo.vcxproj  MonteCarlo.vcxproj.filters  Pixel.cpp  Pixel.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h  rendering1.ppm  rendering2.ppm  rendering3.ppm
